# bmos

./: Cargo.toml  boot-bios-tos2.img  boot-uefi-tos2.efi  boot-uefi-tos2.fat  boot-uefi-tos2.img  build.sh  debug.sh  link.ld  run.sh  x86_64-bmos.json  x86_64-tos-font.json
.cargo/: config.toml
bmos-shell/: Cargo.toml
bmos-shell/src/: builtins.rs  lib.rs  parser.rs
bmos-std/: Cargo.toml
bmos-std/src/: io.rs  lib.rs  syscall.rs
boot/src/: main.rs
iso/boot/grub/: grub.cfg
src/: console.rs  cpu.rs  cpu.s  events.rs  gdt.rs  graphics.rs  interrupts.rs  keyboard.rs  main.rs  memory.rs  scheduler.rs  serial.rs  task.rs  terminal.rs  threading.rs
src/asm/: cpu.s  interrupt.s  threads.s
src/asm/boot/: boot_entry.s
src/shell/: builtins.rs  mod.rs
