[package]
name = "tos2"
version = "0.1.0"
authors = ["Niklas Schoellhorn <schoellhorn.niklas@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = { path = "../Others/bootloader" }
rlibc = "1.0"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
spin = "0.9.0"
x86_64 = "0.14.0"
volatile = "0.2.6"
uart_16550 = "0.2.12"

[workspace]
members = ["boot"]
