[package]
name = "bmos"
version = "0.1.0"
authors = ["Niklas Schoellhorn <schoellhorn.niklas@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = "0.10.1"
rlibc = "1.0"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
spin = "0.9.0"
x86_64 = "0.14.0"
uart_16550 = "0.2.12"
psf = { git = "https://github.com/nschoellhorn/psf.git", branch = "feature/nostd", default-features = false }
pic8259_simple = "0.2.0"
pc-keyboard = "0.5.1"
linked_list_allocator = "0.8.11"

[workspace]
members = ["boot"]

[package.metadata.bootloader]
map-physical-memory = true
