[package]
name = "bmos-shell"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = { version = "6.1.2", features = ["alloc"], default-features = false }
hashbrown = "0.11.2"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
bmos-std = { path = "../bmos-std" }
